# lolcdb

./: .gitignore  CMakeLists.txt  README.md  build_static-small_size.bat
include/: DataFetcher.h  DataReader.h  colors.h  versions.h
src/: CMakeLists.txt  DataFetcher.cpp  DataReader.cpp  main.cpp
